[tool.poetry]
name = "pi_stepper_motor"
version = "0.1.0"
description = "Módulo controlador do motor de passo com um Raspberry Pi"
authors = ["João Marcelo <joaomarceloav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
